# currency-cli

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
src/: converter.rs  main.rs
