[package]
name = "currency-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = { version = "0.5" }
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
