[package]
description = "Currency converter to convert between popular currencies."
license = "MIT"
authors = ["Fabian Jakobs"]
name = "currency-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmltree = { version = "0.10" }
ureq = { version = "2.4", features = ["tls"] }
clap = { version = "3.0", features = ["derive"] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
